--- a/src/components/shop-items/shop-items-container.scss
+++ b/src/components/shop-items/shop-items-container.scss
@@ -6,6 +6,7 @@
     gap: 30px;
     align-items: center;
     margin-bottom: 20px;
+    padding-top: 80px;
     
     .buttons{
         display: flex;
