--- a/src/components/shop-list/shop-list-container.scss
+++ b/src/components/shop-list/shop-list-container.scss
@@ -12,6 +12,9 @@
 
     .purchase-list-wrapper {
         transition: max-height 0.4s ease-in-out;
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
     }
     
     .show-button{
