estilado de calendario

--- a/src/components/purchase-manager/purchase-manager-container.scss
+++ b/src/components/purchase-manager/purchase-manager-container.scss
@@ -2,6 +2,7 @@
 @import "../../shared/styles/box-style";
 
 .purchase-manager-container{
+    padding: 10px;
     padding-top: 80px;
     display: flex;
     flex-direction: column;
