--- a/src/components/purchase-manager/components/purchase-calendar.scss
+++ b/src/components/purchase-manager/components/purchase-calendar.scss
@@ -7,9 +7,20 @@
     border-radius: 15px;
 
     .react-calendar__navigation{
+        .react-calendar__navigation__label {
+            background: transparent !important;
+            &:hover {
+                background: transparent !important;
+            }
+        }
+
         .react-calendar__navigation__arrow{
             color: $green;
             font-size: $h2-size;
+            background: transparent !important;
+            &:hover {
+                background: transparent !important;
+            }
         }
     }
 
@@ -22,9 +33,13 @@
     .react-calendar__tile--active{
         background-color: lighten(red, 40%) !important;
         &:hover{
-            background-color: lighten(red, 20%) !important;
+            background-color: lighten(red, 35%) !important;
         }
 
+    }
+
+    .react-calendar__tile--now{
+        border-radius: 10px;
     }
 
     .calendar-purchase{
