--- a/src/components/shop-items/components/styles/shop-item-list.scss
+++ b/src/components/shop-items/components/styles/shop-item-list.scss
@@ -1,5 +1,6 @@
 @import "../../../../shared/styles/colors";
 @import "../../../../shared/styles/box-style";
+@import "../../../../shared/styles/fonts";
 
 
 .shop-item-list-container {
@@ -8,15 +9,35 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    gap: 15px;
     
     .shop-item-list{
         display: flex;
         flex-direction: column;
         gap: 15px;
+        width: 90%;
+
+        .shop-item-group{
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+
+            .shop-item-letter{
+                font-size: $h3-size;
+                border-bottom: 0.1px solid $separator;
+            }
+
+            .shop-item-list{
+                display: flex;
+                flex-direction: column;
+                gap: 10px;
+            }
+        }
     }
 
     .buttons{
         gap: 8px;
+        align-self: flex-start;
         .shop-item-button{
             padding: 4px 6px;
         }
