--- a/src/shared/components/form-input.scss
+++ b/src/shared/components/form-input.scss
@@ -13,6 +13,7 @@
     input{
         border-radius: 3px;
         border: .5px solid $black;
+        max-width: 150px;
 
         &:hover {
             border: .5px solid $green-hover;
