--- a/src/shared/styles/_colors.scss
+++ b/src/shared/styles/_colors.scss
@@ -10,5 +10,7 @@ $green-hover: #45a049;
 
 $separator: #BDBDBD;
 
+$background: rgb(238, 238, 237);
+
 $box-background: #f9f9f9;
 $box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
