--- a/src/auth/components/styles/auth-form.scss
+++ b/src/auth/components/styles/auth-form.scss
@@ -1,6 +1,7 @@
 @import "../../../shared/styles/box-style";
 @import "../../../shared/styles/buttons";
 @import "../../../shared/styles/colors";
+@import "../../../shared/styles/responsive-breakpoints";
 
 .auth-container{ 
     @include box-style();
@@ -13,13 +14,13 @@
     align-items: center;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -75%);
 
     .auth-form{
         display: flex;
         flex-direction: column;
         gap: 12px;
-        
+
         button{
             @include button-style();
         }
@@ -30,4 +31,26 @@
             color: $green;
         }
     }
+
+    @include respond-to("xs"){
+        width: 70%;
+    }
+
+    @include respond-to("sm"){
+        width: 50%;
+    }
+
+    @include respond-to("md"){
+        width: 35%;
+    }
+
+    @include respond-to("lg"){
+        width: 25%;
+    }
+
+    @include respond-to("xl"){
+        width: 20%;
+
+    }
+
 }
