--- a/src/components/analyzer/components/styles/item-details.scss
+++ b/src/components/analyzer/components/styles/item-details.scss
@@ -8,6 +8,7 @@
     .pie-charts-container{
         display: flex;
         flex-direction: column;
-        gap: 10px;
+        align-items: center;
+        gap: 12px;
     }
 }
