--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,16 +1,38 @@
 @import '../../shared/styles/buttons';
 @import '../../shared/styles/colors';
+@import '../../shared/styles/responsive-breakpoints';
 
 header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px;
+    padding: 10px 15px;
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
     position: fixed;
     background-color: white;
     width: 100%;
     z-index: 1000;
+
+    .logo-container{
+        border: 0px;
+        background: none;        
+        .logo{
+            width: 100px;
+            border-radius: 10px;
+            cursor: pointer;
+        }
+    }
+
+    .header-options{
+        display: flex;
+        gap: 15px;
+        align-items: center;
+
+        .profile-button{
+            @include button-style();
+            padding: 5px 10px;
+        }
+    }
 }
 
 .burgerButton{
@@ -117,16 +139,26 @@ header {
     height: 45px;
 }
 
-@media (min-width: 768px) {
+@include respond-to("sm"){
+    header{
+        display: flex;
+        gap: 15px;
+    }
     .burgerButton {
         display: none;
     }
-    .headerList {
-        display: flex;
-        gap: 20px;
-        list-style: none;
-        margin-right: 20px;
+    .header-options{
+        flex-direction: row-reverse;
+        gap: 5px;
+        .headerList {
+            display: flex;
+            flex-direction: row-reverse;
+            gap: 10px;
+            list-style: none;
+            padding: 0;
+        }
     }
+    
     .burgerMenuClosed {
         display: none;
     }
@@ -145,7 +177,7 @@ header {
     .link-button{
         width: auto;
         height: auto;
-        padding: 10px 15px;
+        padding: 5px 15px;
         background-color: transparent;
         color: $black;
 
@@ -154,4 +186,16 @@ header {
             color: white;
         }
     }
+}
+
+@include respond-to("md"){
+    header{
+        .logo-container{
+            .logo{
+                width: 115px;
+                border-radius: 10px;
+                cursor: pointer;
+            }
+        }
+    }    
 }
