--- a/src/components/shop-items/components/styles/shop-item.scss
+++ b/src/components/shop-items/components/styles/shop-item.scss
@@ -1,3 +1,5 @@
+@import "../../../../shared/styles/responsive-breakpoints";
+
 .shop-item{
     display: flex;
     flex-direction: column;
@@ -14,4 +16,24 @@
         gap: 5px;
         align-items: flex-end;
     }
+
+    @include respond-to("sm"){
+        &{
+            padding-left: 30px;
+        }
+    }
+
+    @include respond-to("md"){
+
+    }
+
+    @include respond-to("lg"){
+
+    }
+
+    @include respond-to("xl"){
+
+    }
 }
+
+
