--- a/src/components/summary/summary-container.scss
+++ b/src/components/summary/summary-container.scss
@@ -1,29 +1,30 @@
 @import "../../shared/styles/fonts";
 @import "../../shared/styles/colors";
+@import "../../shared/styles/responsive-breakpoints";
 
 .summary{
     display: flex;
     flex-direction: column;
     gap: 15px;
-}
 
-.by-sector{
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-    padding-bottom: 20px;
-    border-bottom: .1px solid $separator;
-    
-    .sector-list{
+    .by-sector{
         display: flex;
         flex-direction: column;
-        gap: 3px;
-    }
+        gap: 5px;
+        padding-bottom: 20px;
+        border-bottom: .1px solid $separator;
+        
+        .sector-list{
+            display: flex;
+            flex-direction: column;
+            gap: 3px;
+        }
 
-    &:last-child {
-        border-bottom: none;
-        padding-bottom: 0;
-        margin-bottom: 0px;    
-    }
+        &:last-child {
+            border-bottom: none;
+            padding-bottom: 0;
+            margin-bottom: 0px;    
+        }
+    }   
 }
 
